#
# CASA - Common Astronomy Software Applications
# Copyright (C) 2010 by ESO (in the framework of the ALMA collaboration)
#
# This file is part of CASA.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
#

#add_definitions( -DWITHOUT_ACS -pg )
#set( CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pg" )
#set( CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -pg" )
#set( CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} -pg" )

add_definitions( -DWITHOUT_ACS )

casa_add_library( alma
ASDM/AlmaRadiometerRow.cc
ASDM/AlmaRadiometerTable.cc
ASDM/Angle.cc
ASDM/AngularRate.cc
ASDM/AnnotationRow.cc
ASDM/AnnotationTable.cc
ASDM/AntennaRow.cc
ASDM/AntennaTable.cc
ASDM/ArrayTime.cc
ASDM/ArrayTimeInterval.cc
ASDM/ASDM.cc
ASDM/Base64.cc
ASDMBinaries/BaselineMetadata.cc
ASDMBinaries/BaselinesSet.cc
ASDMBinaries/DataDescriptionsSet.cc
ASDMBinaries/Error.cc
ASDMBinaries/Integration.cc
ASDMBinaries/SDMBinData.cc
ASDMBinaries/SDMDataObject.cc
ASDMBinaries/SDMDataObjectParser.cc
ASDMBinaries/SDMDataObjectReader.cc
ASDMBinaries/SDMDataObjectStreamReader.cc
ASDMBinaries/SDMDataObjectWriter.cc
ASDMBinaries/SwitchCyclesList.cc
ASDM/BooleanWrapper.cc
ASDM/ByteWrapper.cc
ASDM/CalAmpliRow.cc
ASDM/CalAmpliTable.cc
ASDM/CalAtmosphereRow.cc
ASDM/CalAtmosphereTable.cc
ASDM/CalAppPhaseRow.cc
ASDM/CalAppPhaseTable.cc
ASDM/CalBandpassRow.cc
ASDM/CalBandpassTable.cc
ASDM/CalCurveRow.cc
ASDM/CalCurveTable.cc
ASDM/CalDataRow.cc
ASDM/CalDataTable.cc
ASDM/CalDelayRow.cc
ASDM/CalDelayTable.cc
ASDM/CalDeviceRow.cc
ASDM/CalDeviceTable.cc
ASDM/CalFluxRow.cc
ASDM/CalFluxTable.cc
ASDM/CalFocusModelRow.cc
ASDM/CalFocusModelTable.cc
ASDM/CalFocusRow.cc
ASDM/CalFocusTable.cc
ASDM/CalGainRow.cc
ASDM/CalGainTable.cc
ASDM/CalHolographyRow.cc
ASDM/CalHolographyTable.cc
ASDM/CalPhaseRow.cc
ASDM/CalPhaseTable.cc
ASDM/CalPointingModelRow.cc
ASDM/CalPointingModelTable.cc
ASDM/CalPointingRow.cc
ASDM/CalPointingTable.cc
ASDM/CalPositionRow.cc
ASDM/CalPositionTable.cc
ASDM/CalPrimaryBeamRow.cc
ASDM/CalPrimaryBeamTable.cc
ASDM/CalReductionRow.cc
ASDM/CalReductionTable.cc
ASDM/CalSeeingRow.cc
ASDM/CalSeeingTable.cc
ASDM/CalWVRRow.cc
ASDM/CalWVRTable.cc
ASDM/CharacterWrapper.cc
ASDM/ComplexWrapper.cc
ASDM/ConfigDescriptionRow.cc
ASDM/ConfigDescriptionTable.cc
ASDM/ConversionException.cc
ASDM/CorrelatorModeRow.cc
ASDM/CorrelatorModeTable.cc
ASDM/DataDescriptionRow.cc
ASDM/DataDescriptionTable.cc
ASDM/DelayModelRow.cc
ASDM/DelayModelTable.cc
ASDM/DelayModelFixedParametersRow.cc	
ASDM/DelayModelFixedParametersTable.cc
ASDM/DelayModelVariableParametersRow.cc
ASDM/DelayModelVariableParametersTable.cc
ASDM/DopplerRow.cc
ASDM/DopplerTable.cc
ASDM/DoubleWrapper.cc
ASDM/DuplicateKey.cc
ASDM/EndianStream.cc
ASDM/Entity.cc
ASDM/EntityId.cc
ASDM/EntityRef.cc
ASDM/EnumerationParser.cc
ASDM/EphemerisRow.cc
ASDM/EphemerisTable.cc
ASDM/ExecBlockRow.cc
ASDM/ExecBlockTable.cc
ASDM/FeedRow.cc
ASDM/FeedTable.cc
ASDM/FieldRow.cc
ASDM/FieldTable.cc
ASDM/FlagRow.cc
ASDM/FlagTable.cc
ASDM/FlagCmdRow.cc
ASDM/FlagCmdTable.cc
ASDM/FloatWrapper.cc
ASDM/Flux.cc
ASDM/FocusModelRow.cc
ASDM/FocusModelTable.cc
ASDM/FocusRow.cc
ASDM/FocusTable.cc
ASDM/FreqOffsetRow.cc
ASDM/FreqOffsetTable.cc
ASDM/Frequency.cc
ASDM/GainTrackingRow.cc
ASDM/GainTrackingTable.cc
ASDM/HistoryRow.cc
ASDM/HistoryTable.cc
ASDM/HolographyRow.cc
ASDM/HolographyTable.cc
ASDM/Humidity.cc
ASDM/IllegalAccessException.cc
ASDM/IntegerWrapper.cc
ASDM/Interval.cc
ASDM/InvalidArgumentException.cc
ASDM/InvalidDataException.cc
ASDM/Length.cc
ASDM/LongWrapper.cc
ASDM/MainRow.cc
ASDM/MainTable.cc
ASDM/Merger.cc
ASDM/Misc.cc
ASDM/NoSuchRow.cc
ASDM/NumberFormatException.cc
ASDM/ObservationRow.cc
ASDM/ObservationTable.cc
ASDM/OutOfBoundsException.cc
ASDM/Parser.cc
ASDM/PartId.cc
ASDM/PointingModelRow.cc
ASDM/PointingModelTable.cc
ASDM/PointingRow.cc
ASDM/PointingTable.cc
ASDM/PolarizationRow.cc
ASDM/PolarizationTable.cc
ASDM/Pressure.cc
ASDM/ProcessorRow.cc
ASDM/ProcessorTable.cc
ASDM/ReceiverRow.cc
ASDM/ReceiverTable.cc
ASDM/SBSummaryRow.cc
ASDM/SBSummaryTable.cc
ASDM/ScaleTable.cc
ASDM/ScaleTable.h
ASDM/ScaleRow.cc
ASDM/ScaleRow.h
ASDM/ScanRow.cc
ASDM/ScanTable.cc
ASDM/SeeingRow.cc
ASDM/SeeingTable.cc
ASDM/ShortWrapper.cc
ASDM/SourceRow.cc
ASDM/SourceTable.cc
ASDM/SpectralWindowRow.cc
ASDM/SpectralWindowTable.cc
ASDM/Speed.cc
ASDM/SquareLawDetectorRow.cc
ASDM/SquareLawDetectorTable.cc
ASDM/StateRow.cc
ASDM/StateTable.cc
ASDM/StationRow.cc
ASDM/StationTable.cc
ASDM/StringTokenizer.cc
ASDM/SubscanRow.cc
ASDM/SubscanTable.cc
ASDM/SwitchCycleRow.cc
ASDM/SwitchCycleTable.cc
ASDM/SysCalRow.cc
ASDM/SysCalTable.cc
ASDM/SysPowerRow.cc
ASDM/SysPowerTable.cc
ASDM/Tag.cc
ASDM/TagFormatException.cc
ASDM/TagType.cc
ASDM/Temperature.cc
ASDM/TotalPowerRow.cc
ASDM/TotalPowerTable.cc
ASDM/UniquenessViolationException.cc
ASDM/WeatherRow.cc
ASDM/WeatherTable.cc
ASDM/WVMCalRow.cc
ASDM/WVMCalTable.cc
Enumerations/CACAPolarization.cc
Enumerations/CAccumMode.cc
Enumerations/CAntennaMake.cc
Enumerations/CAntennaMotionPattern.cc
Enumerations/CAntennaType.cc
Enumerations/CAssociatedCalNature.cc
Enumerations/CAssociatedFieldNature.cc
Enumerations/CAtmPhaseCorrection.cc
Enumerations/CAxisName.cc
Enumerations/CBasebandName.cc
Enumerations/CBaselineReferenceCode.cc
Enumerations/CCalCurveType.cc
Enumerations/CCalDataOrigin.cc
Enumerations/CCalibrationDevice.cc
Enumerations/CCalibrationFunction.cc
Enumerations/CCalibrationMode.cc
Enumerations/CCalibrationSet.cc
Enumerations/CCalType.cc
Enumerations/CCorrelationBit.cc
Enumerations/CCorrelationMode.cc
Enumerations/CCorrelatorCalibration.cc
Enumerations/CCorrelatorName.cc
Enumerations/CCorrelatorType.cc
Enumerations/CDataContent.cc
Enumerations/CDataScale.cc
Enumerations/CDetectorBandType.cc
Enumerations/CDifferenceType.cc
Enumerations/CDirectionReferenceCode.cc
Enumerations/CDopplerReferenceCode.cc
Enumerations/CDopplerTrackingMode.cc
Enumerations/CFieldCode.cc
Enumerations/CFilterMode.cc
Enumerations/CFluxCalibrationMethod.cc
Enumerations/CFocusMethod.cc
Enumerations/CFrequencyReferenceCode.cc
Enumerations/CHolographyChannelType.cc
Enumerations/CInvalidatingCondition.cc
Enumerations/CNetSideband.cc
Enumerations/CPointingMethod.cc
Enumerations/CPointingModelMode.cc
Enumerations/CPolarizationType.cc
Enumerations/CPositionMethod.cc
Enumerations/CPositionReferenceCode.cc
Enumerations/CPrimaryBeamDescription.cc
Enumerations/CPrimitiveDataType.cc
Enumerations/CProcessorSubType.cc
Enumerations/CProcessorType.cc
Enumerations/CRadialVelocityReferenceCode.cc
Enumerations/CReceiverBand.cc
Enumerations/CReceiverSideband.cc
Enumerations/CSBType.cc
Enumerations/CScanIntent.cc
Enumerations/CSchedulerMode.cc
Enumerations/CSidebandProcessingMode.cc
Enumerations/CSourceModel.cc
Enumerations/CSpectralResolutionType.cc
Enumerations/CStationType.cc
Enumerations/CStokesParameter.cc
Enumerations/CSubscanIntent.cc
Enumerations/CSwitchingMode.cc
Enumerations/CSyscalMethod.cc
Enumerations/CSynthProf.cc
Enumerations/CTimeSampling.cc
Enumerations/CTimeScale.cc
Enumerations/CWeightType.cc
Enumerations/CWindowFunction.cc
Enumerations/CWVRMethod.cc
Enumtcl/ACAPolarization.cc
Enumtcl/AccumMode.cc
Enumtcl/AntennaMake.cc
Enumtcl/AntennaMotionPattern.cc
Enumtcl/AntennaType.cc
Enumtcl/AssociatedCalNature.cc
Enumtcl/AssociatedFieldNature.cc
Enumtcl/AtmPhaseCorrection.cc
Enumtcl/AxisName.cc
Enumtcl/BasebandName.cc
Enumtcl/BaselineReferenceCode.cc
Enumtcl/CalCurveType.cc
Enumtcl/CalDataOrigin.cc
Enumtcl/CalibrationDevice.cc
Enumtcl/CalibrationFunction.cc
Enumtcl/CalibrationMode.cc
Enumtcl/CalibrationSet.cc
Enumtcl/CalType.cc
Enumtcl/CorrelationBit.cc
Enumtcl/CorrelationMode.cc
Enumtcl/CorrelatorCalibration.cc
Enumtcl/CorrelatorName.cc
Enumtcl/CorrelatorType.cc
Enumtcl/DataContent.cc
Enumtcl/DataScale.cc
Enumtcl/DetectorBandType.cc
Enumtcl/DifferenceType.cc
Enumtcl/DirectionReferenceCode.cc
Enumtcl/DopplerReferenceCode.cc
Enumtcl/DopplerTrackingMode.cc
Enumtcl/FieldCode.cc
Enumtcl/FilterMode.cc
Enumtcl/FluxCalibrationMethod.cc
Enumtcl/FocusMethod.cc
Enumtcl/FrequencyReferenceCode.cc
Enumtcl/HolographyChannelType.cc
Enumtcl/InvalidatingCondition.cc
Enumtcl/NetSideband.cc
Enumtcl/PointingMethod.cc
Enumtcl/PointingModelMode.cc
Enumtcl/PolarizationType.cc
Enumtcl/PositionMethod.cc
Enumtcl/PositionReferenceCode.cc
Enumtcl/PrimaryBeamDescription.cc
Enumtcl/PrimitiveDataType.cc
Enumtcl/ProcessorSubType.cc
Enumtcl/ProcessorType.cc
Enumtcl/RadialVelocityReferenceCode.cc
Enumtcl/ReceiverBand.cc
Enumtcl/ReceiverSideband.cc
Enumtcl/SBType.cc
Enumtcl/ScanIntent.cc
Enumtcl/SchedulerMode.cc
Enumtcl/SidebandProcessingMode.cc
Enumtcl/SourceModel.cc
Enumtcl/SpectralResolutionType.cc
Enumtcl/StationType.cc
Enumtcl/StokesParameter.cc
Enumtcl/SubscanIntent.cc
Enumtcl/SwitchingMode.cc
Enumtcl/SynthProf.cc
Enumtcl/SyscalMethod.cc
Enumtcl/TimeSampling.cc
Enumtcl/TimeScale.cc
Enumtcl/WindowFunction.cc
Enumtcl/WeightType.cc
Enumtcl/WVRMethod.cc
  MS2ASDM/MS2ASDM.cc
  )

install (FILES
	ASDM/ASDM.h
	ASDM/ASDMAll.h
	ASDM/ASDMEntities.h
	ASDM/ASDMExceptions.h
	ASDM/ASDMTypes.h
	ASDM/ASDMValuesParser.h
	ASDM/AlmaRadiometerRow.h
	ASDM/AlmaRadiometerTable.h
	ASDM/Angle.h
	ASDM/AngularRate.h
	ASDM/AnnotationRow.h
	ASDM/AnnotationTable.h
	ASDM/AntennaRow.h
	ASDM/AntennaTable.h
	ASDM/ArrayTime.h
	ASDM/ArrayTimeInterval.h
	ASDM/Base64.h
	ASDM/BooleanWrapper.h
	ASDM/ByteWrapper.h
	ASDM/CalAmpliRow.h
	ASDM/CalAmpliTable.h
	ASDM/CalAtmosphereRow.h
	ASDM/CalAtmosphereTable.h
	ASDM/CalBandpassRow.h
	ASDM/CalBandpassTable.h
	ASDM/CalCurveRow.h
	ASDM/CalCurveTable.h
	ASDM/CalDataRow.h
	ASDM/CalDataTable.h
	ASDM/CalDelayRow.h
	ASDM/CalDelayTable.h
	ASDM/CalDeviceRow.h
	ASDM/CalDeviceTable.h
	ASDM/CalFluxRow.h
	ASDM/CalFluxTable.h
	ASDM/CalFocusModelRow.h
	ASDM/CalFocusModelTable.h
	ASDM/CalFocusRow.h
	ASDM/CalFocusTable.h
	ASDM/CalGainRow.h
	ASDM/CalGainTable.h
	ASDM/CalHolographyRow.h
	ASDM/CalHolographyTable.h
	ASDM/CalPhaseRow.h
	ASDM/CalPhaseTable.h
	ASDM/CalPointingModelRow.h
	ASDM/CalPointingModelTable.h
	ASDM/CalPointingRow.h
	ASDM/CalPointingTable.h
	ASDM/CalPositionRow.h
	ASDM/CalPositionTable.h
	ASDM/CalPrimaryBeamRow.h
	ASDM/CalPrimaryBeamTable.h
	ASDM/CalReductionRow.h
	ASDM/CalReductionTable.h
	ASDM/CalSeeingRow.h
	ASDM/CalSeeingTable.h
	ASDM/CalWVRRow.h
	ASDM/CalWVRTable.h
	ASDM/CharacterWrapper.h
	ASDM/ComplexWrapper.h
	ASDM/ConfigDescriptionRow.h
	ASDM/ConfigDescriptionTable.h
	ASDM/ConversionException.h
	ASDM/CorrelatorModeRow.h
	ASDM/CorrelatorModeTable.h
	ASDM/DataBlock.h
	ASDM/DataDescriptionRow.h
	ASDM/DataDescriptionTable.h
	ASDM/DelayModelRow.h
	ASDM/DelayModelTable.h
	ASDM/DelayModelFixedParametersRow.h
	ASDM/DelayModelFixedParametersTable.h
	ASDM/DelayModelVariableParametersRow.h
	ASDM/DelayModelVariableParametersTable.h
	ASDM/DopplerRow.h
	ASDM/DopplerTable.h
	ASDM/DoubleWrapper.h
	ASDM/DuplicateKey.h
	ASDM/EndianStream.h
	ASDM/Entity.h
	ASDM/EntityId.h
	ASDM/EntityRef.h
	ASDM/EnumerationParser.h
	ASDM/EphemerisRow.h
	ASDM/EphemerisTable.h
	ASDM/ExecBlockRow.h
	ASDM/ExecBlockTable.h
	ASDM/FeedRow.h
	ASDM/FeedTable.h
	ASDM/FieldRow.h
	ASDM/FieldTable.h
	ASDM/FlagCmdRow.h
	ASDM/FlagCmdTable.h
	ASDM/FlagRow.h
	ASDM/FlagTable.h
	ASDM/FloatWrapper.h
	ASDM/Flux.h
	ASDM/FocusModelRow.h
	ASDM/FocusModelTable.h
	ASDM/FocusRow.h
	ASDM/FocusTable.h
	ASDM/FreqOffsetRow.h
	ASDM/FreqOffsetTable.h
	ASDM/Frequency.h
	ASDM/GainTrackingRow.h
	ASDM/GainTrackingTable.h
	ASDM/HistoryRow.h
	ASDM/HistoryTable.h
	ASDM/HolographyRow.h
	ASDM/HolographyTable.h
	ASDM/Humidity.h
	ASDM/IDLConversionException.h
	ASDM/IllegalAccessException.h
	ASDM/IntegerWrapper.h
	ASDM/Interval.h
	ASDM/InvalidArgumentException.h
	ASDM/InvalidDataException.h
	ASDM/Length.h
	ASDM/LongWrapper.h
	ASDM/MainRow.h
	ASDM/MainTable.h
	ASDM/Merger.h
	ASDM/Misc.h
	ASDM/NoSuchRow.h
	ASDM/NumberFormatException.h
	ASDM/ObservationRow.h
	ASDM/ObservationTable.h
	ASDM/OutOfBoundsException.h
	ASDM/Parser.h
	ASDM/PartId.h
	ASDM/PointingModelRow.h
	ASDM/PointingModelTable.h
	ASDM/PointingRow.h
	ASDM/PointingTable.h
	ASDM/PolarizationRow.h
	ASDM/PolarizationTable.h
	ASDM/Pressure.h
	ASDM/ProcessorRow.h
	ASDM/ProcessorTable.h
	ASDM/ReceiverRow.h
	ASDM/ReceiverTable.h
	ASDM/Representable.h
	ASDM/RowTransformer.h
	ASDM/SBSummaryRow.h
	ASDM/SBSummaryTable.h
	ASDM/ScaleRow.h
	ASDM/ScaleTable.h
	ASDM/ScanRow.h
	ASDM/ScanTable.h
	ASDM/SeeingRow.h
	ASDM/SeeingTable.h
	ASDM/ShortWrapper.h
	ASDM/SourceRow.h
	ASDM/SourceTable.h
	ASDM/SpectralWindowRow.h
	ASDM/SpectralWindowTable.h
	ASDM/Speed.h
	ASDM/SquareLawDetectorRow.h
	ASDM/SquareLawDetectorTable.h
	ASDM/StateRow.h
	ASDM/StateTable.h
	ASDM/StationRow.h
	ASDM/StationTable.h
	ASDM/StringTokenizer.h
	ASDM/SubscanRow.h
	ASDM/SubscanTable.h
	ASDM/SwitchCycleRow.h
	ASDM/SwitchCycleTable.h
	ASDM/SysCalRow.h
	ASDM/SysCalTable.h
	ASDM/SysPowerRow.h
	ASDM/SysPowerTable.h
	ASDM/TableStreamReader.h
	ASDM/Tag.h
	ASDM/TagFormatException.h
	ASDM/TagType.h
	ASDM/Temperature.h
	ASDM/TotalPowerRow.h
	ASDM/TotalPowerTable.h
	ASDM/UTCCorrection.h
	ASDM/UniquenessViolationException.h
	ASDM/WVMCalRow.h
	ASDM/WVMCalTable.h
	ASDM/WeatherRow.h
	ASDM/WeatherTable.h
	DESTINATION include/casacode/alma/ASDM
	)
install (FILES
	ASDMBinaries/BaselineMetadata.h
	ASDMBinaries/BaselinesSet.h
	ASDMBinaries/CommonDefines.h
	ASDMBinaries/DataDescriptionsSet.h
	ASDMBinaries/Error.h
	ASDMBinaries/Integration.h
	ASDMBinaries/SDMBinData.h
	ASDMBinaries/SDMDataObject.h
	ASDMBinaries/SDMDataObjectParser.h
	ASDMBinaries/SDMDataObjectPartTypes.h
	ASDMBinaries/SDMDataObjectReader.h
	ASDMBinaries/SDMDataObjectStreamReader.h
	ASDMBinaries/SDMDataObjectWriter.h
	ASDMBinaries/SDMDataViews.h
	ASDMBinaries/SwitchCyclesList.h
	DESTINATION include/casacode/alma/ASDMBinaries
	)
install (FILES
	Enumerations/CACAPolarization.h
	Enumerations/CAccumMode.h
	Enumerations/CAntennaMake.h
	Enumerations/CAntennaMotionPattern.h
	Enumerations/CAntennaType.h
	Enumerations/CAssociatedCalNature.h
	Enumerations/CAssociatedFieldNature.h
	Enumerations/CAtmPhaseCorrection.h
	Enumerations/CAxisName.h
	Enumerations/CBasebandName.h
	Enumerations/CBaselineReferenceCode.h
	Enumerations/CCalCurveType.h
	Enumerations/CCalDataOrigin.h
	Enumerations/CCalType.h
	Enumerations/CCalibrationDevice.h
	Enumerations/CCalibrationFunction.h
	Enumerations/CCalibrationMode.h
	Enumerations/CCalibrationSet.h
	Enumerations/CCorrelationBit.h
	Enumerations/CCorrelationMode.h
	Enumerations/CCorrelatorCalibration.h
	Enumerations/CCorrelatorName.h
	Enumerations/CCorrelatorType.h
	Enumerations/CDataContent.h
	Enumerations/CDataScale.h
	Enumerations/CDetectorBandType.h
	Enumerations/CDirectionReferenceCode.h
	Enumerations/CDopplerReferenceCode.h
	Enumerations/CDopplerTrackingMode.h
	Enumerations/CFieldCode.h
	Enumerations/CFilterMode.h
	Enumerations/CFluxCalibrationMethod.h
	Enumerations/CFocusMethod.h
	Enumerations/CFrequencyReferenceCode.h
	Enumerations/CHolographyChannelType.h
	Enumerations/CInvalidatingCondition.h
	Enumerations/CNetSideband.h
	Enumerations/CPointingMethod.h
	Enumerations/CPointingModelMode.h
	Enumerations/CPolarizationType.h
	Enumerations/CPositionMethod.h
	Enumerations/CPositionReferenceCode.h
	Enumerations/CPrimaryBeamDescription.h
	Enumerations/CPrimitiveDataType.h
	Enumerations/CProcessorSubType.h
	Enumerations/CProcessorType.h
	Enumerations/CRadialVelocityReferenceCode.h
	Enumerations/CReceiverBand.h
	Enumerations/CReceiverSideband.h
	Enumerations/CSBType.h
	Enumerations/CScanIntent.h
	Enumerations/CSchedulerMode.h
	Enumerations/CSidebandProcessingMode.h
	Enumerations/CSourceModel.h
	Enumerations/CSpectralResolutionType.h
	Enumerations/CStationType.h
	Enumerations/CStokesParameter.h
	Enumerations/CSubscanIntent.h
	Enumerations/CSwitchingMode.h
	Enumerations/CSyscalMethod.h
	Enumerations/CTimeSampling.h
	Enumerations/CTimeScale.h
	Enumerations/CWVRMethod.h
	Enumerations/CWeightType.h
	Enumerations/CWindowFunction.h
	DESTINATION include/casacode/alma/Enumerations
	)
install (FILES
	Enumtcl/ACAPolarization.h
	Enumtcl/AccumMode.h
	Enumtcl/AntennaMake.h
	Enumtcl/AntennaMotionPattern.h
	Enumtcl/AntennaType.h
	Enumtcl/AssociatedCalNature.h
	Enumtcl/AssociatedFieldNature.h
	Enumtcl/AtmPhaseCorrection.h
	Enumtcl/AxisName.h
	Enumtcl/BasebandName.h
	Enumtcl/BaselineReferenceCode.h
	Enumtcl/CalCurveType.h
	Enumtcl/CalDataOrigin.h
	Enumtcl/CalType.h
	Enumtcl/CalibrationDevice.h
	Enumtcl/CalibrationFunction.h
	Enumtcl/CalibrationMode.h
	Enumtcl/CalibrationSet.h
	Enumtcl/CorrelationBit.h
	Enumtcl/CorrelationMode.h
	Enumtcl/CorrelatorCalibration.h
	Enumtcl/CorrelatorName.h
	Enumtcl/CorrelatorType.h
	Enumtcl/DataContent.h
	Enumtcl/DataScale.h
	Enumtcl/DetectorBandType.h
	Enumtcl/DirectionReferenceCode.h
	Enumtcl/DopplerReferenceCode.h
	Enumtcl/DopplerTrackingMode.h
	Enumtcl/FieldCode.h
	Enumtcl/FilterMode.h
	Enumtcl/FluxCalibrationMethod.h
	Enumtcl/FocusMethod.h
	Enumtcl/FrequencyReferenceCode.h
	Enumtcl/HolographyChannelType.h
	Enumtcl/InvalidatingCondition.h
	Enumtcl/NetSideband.h
	Enumtcl/PointingMethod.h
	Enumtcl/PointingModelMode.h
	Enumtcl/PolarizationType.h
	Enumtcl/PositionMethod.h
	Enumtcl/PositionReferenceCode.h
	Enumtcl/PrimaryBeamDescription.h
	Enumtcl/PrimitiveDataType.h
	Enumtcl/ProcessorSubType.h
	Enumtcl/ProcessorType.h
	Enumtcl/RadialVelocityReferenceCode.h
	Enumtcl/ReceiverBand.h
	Enumtcl/ReceiverSideband.h
	Enumtcl/SBType.h
	Enumtcl/ScanIntent.h
	Enumtcl/SchedulerMode.h
	Enumtcl/SidebandProcessingMode.h
	Enumtcl/SourceModel.h
	Enumtcl/SpectralResolutionType.h
	Enumtcl/StationType.h
	Enumtcl/StokesParameter.h
	Enumtcl/SubscanIntent.h
	Enumtcl/SwitchingMode.h
	Enumtcl/SyscalMethod.h
	Enumtcl/TimeSampling.h
	Enumtcl/TimeScale.h
	Enumtcl/WVRMethod.h
	Enumtcl/WeightType.h
	Enumtcl/WindowFunction.h
	DESTINATION include/casacode/alma/Enumtcl
	)

casa_add_executable( alma asdm2MS 
  apps/asdm2MS/asdm2MS.cc
  apps/asdm2MS/ASDM2MSFiller.cc
  apps/asdm2MS/BDF2AsdmStManIndex.cc
  apps/asdm2MS/ASDMTableBase.cc
  apps/asdm2MS/ASDMTables.cc
  apps/asdm2MS/ASDMVerbatimFiller.cc
  apps/asdm2MS/Name2Table.cc
  apps/asdm2MS/UvwCoords.cc
  )

casa_add_executable( alma MS2asdm
  apps/MS2asdm/MS2asdm.cc 
  )

casa_add_executable( alma asdmSummary
  apps/asdmSummary/asdmSummary.cc 
  )

 casa_add_executable( alma bdflags2MS
   apps/asdm2MS/bdflags2MS.cc
  )

#casa_add_executable( alma parasdm2MS
#  apps/asdm2MS/parasdm2MS.cc
#  apps/asdm2MS/ASDM2MSFiller.cc
#  apps/asdm2MS/BDF2AsdmStManIndex.cc
#  apps/asdm2MS/ASDMTableBase.cc
#  apps/asdm2MS/ASDMTables.cc
#  apps/asdm2MS/ASDMVerbatimFiller.cc
#  apps/asdm2MS/Name2Table.cc
#  apps/asdm2MS/UvwCoords.cc
#  )

casa_add_assay(alma ASDMBinaries/test/tReadBigBDF.cc)
casa_add_assay(alma ASDMBinaries/test/tReadAllBDFs.cc)
casa_add_assay(alma ASDM/test/tTableStreamReader.cc)
casa_add_assay(alma ASDMBinaries/test/tReadSeqBDFs.cc)
casa_add_assay(alma ASDMBinaries/test/tReadParBDFs.cc)
#casa_add_assay(alma test/tEmptyMS.cc)

#
# The Python <- C++ binding generated with swig
#
#
# Firstly the Enumerations
#
#add_subdirectory(Enumerations/swig)
#
# Then the ASDM
#
#add_subdirectory(ASDM/swig)


